--- a/index.css
+++ b/index.css
@@ -2,17 +2,23 @@
     margin: 0;
     padding: 0;
   }
-  nav {
-    width: 100%;
-    height: 50px;
-    background-color: black;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
-    place-items: center;
-    padding-left:px;
-  }
-  nav ul a:hover{
-    background-color:grey;
-    color:white;
-  }
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17 px;
+}
+.topnav a.hover{
+    background-color: #ddd;
+    color: black;
+}
+.topnav a.active {
+    background-color: #04AA6d;
+    color: white;
+}
