--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@
 .topnav {
     background-color: #333;
     overflow: hidden;
+    position: sticky;
+    position: -webkit-sticky;
 }
 .topnav a {
     float: left;
@@ -12,7 +14,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17 px;
+    font-size: 17px;
 }
 .topnav a.hover{
     background-color: #ddd;
@@ -21,4 +23,33 @@
 .topnav a.active {
     background-color: #04AA6d;
     color: white;
+}
+body{
+    text-align: center;
+}
+.wrap{
+    overflow: hidden;
+    position: relative;
+}
+.background{
+    opacity: 0.8;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    bottom: 100;
+}
+.content{
+    position: relative;
+    text-align: left;
+}
+.meimage{
+    float: left;
+    padding-right: 10px;
+    padding-left: 50px;
+}
+.contenttxt{
+    text-align: left;
+    color: black;
 }
