--- a/about.css
+++ b/about.css
@@ -3,13 +3,12 @@
     padding: 0;
   }
 .topnav {
-    background-color: #333;
     overflow: hidden;
     position: sticky;
     position: -webkit-sticky;
 }
 .topnav a {
-    color: #f2f2f2;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -37,4 +36,42 @@ body{
     float: right;
     padding-right: 10px;
     padding-left: 25px;
+}
+.me{
+    color: green;
+}
+.text{
+    float: right;
+    text-align: right;
+}
+.links{
+    float: right;
+    position: relative;
+}
+.fa {
+    padding: 10px;
+    font-size: 20px;
+    width: 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+  }
+  .fa:hover {
+    opacity: 0.7;
+  }
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+.footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    font-style: bold;
+    font-size: medium;
 }
