--- a/index.css
+++ b/index.css
@@ -3,13 +3,12 @@
     padding: 0;
   }
 .topnav {
-    background-color: #333;
     overflow: hidden;
     position: sticky;
     position: -webkit-sticky;
 }
 .topnav a {
-    color: #f2f2f2;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -75,3 +74,11 @@ body{
     background: #55ACEE;
     color: white;
   }
+.footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    font-style: bold;
+    font-size: medium;
+}
